<resources>
    <string name="app_name">TrimetLive</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_test">Test</string>
    <string name="button_mapTest">callMap</string>
    <string name="button_arrivals">Arrivals</string>
    <string name="title_activity_map">mapActivity</string>
    <string name="title_activity_live_map">Map</string>
    <string name="title_activity_arrivals">ArrivalsActivity</string>
    <string name="stopIdHing">Enter Stop ID</string>
    <string name="title_activity_test">testActivity</string>
    <string name="live_vehicle">Live vehicles location</string>
    <string name="arrivals_selected_routes_textview">Arrivals for the selected routes</string>

    <!--COLORS-->
    <color name="white">#FFFFFF</color>
    <color name="red">#ffff0000</color>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
