<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<EditText android:id="@+id/edit_message"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/edit_message" />-->
    <!--<Button android:id="@+id/sendMessage"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/button_send"-->
        <!--android:background="?android:attr/selectableItemBackground"-->
        <!--android:onClick="sendMessage" />-->


    <Button android:id="@+id/callMap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_mapTest"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="callMap" />

    <Button android:id="@+id/callArrivals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_arrivals"
        android:background="@drawable/layout_border"
        android:onClick="callArrivalsActivity" />
    <!--android:background="?android:attr/selectableItemBackground"-->

    <Button android:id="@+id/testCall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_test"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="callTest" />
    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
